--- a/week4/templates/index.html
+++ b/week4/templates/index.html
@@ -3,6 +3,9 @@
         <h1>Song search</h1>
 
         <form action="/process" method="post">
+            <input type="radio" name="engine" value="1"> Boolean search
+            <input type="radio" name="engine" value="2"> Tf idf
+            <input type="radio" name="engine" value="3"> Neural search
             <input type="text" name="query" placeholder="Enter text">
             <button type="submit">Search</button>
         </form>
