--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             <h1>Song search</h1>
         </div>
 
-        <form action="/process" method="post">
+        <form action="/" method="post">
             <input type="radio" id="radio1" name="engine" value="1" checked>
             <label for="radio1">Boolean search</label>
             <input type="radio" id="radio2" name="engine" value="2">
