--- a/templates/song.html
+++ b/templates/song.html
@@ -11,9 +11,9 @@
         <div class="container">
             <div class="content-song">
                 {% if results %}
-                    <h2>{{ results[0] }}</h2>
-                    <h3>{{ results[1] }}</h3>
-                    <p>{{ results[2] }}</p>
+                    <h2 style="text-align: center;">{{ results[0] }}</h2>
+                    <h3 style="text-align: center;">{{ results[1] }}</h3>
+                    <p style="white-space: pre-line; text-align: center;">{{ results[2]}}</p>
                 {% endif %}
             </div>
             <div class="sidebar">
