--- a/static/main.css
+++ b/static/main.css
@@ -98,3 +98,9 @@ input[type="radio"]:checked {
     height: 30em;
     max-width: 100%;
 }
+
+.highlight {
+	text-align: center;
+	color: rgb(0, 0, 0);
+	font-weight: bold;
+}
