--- a/static/main.css
+++ b/static/main.css
@@ -101,7 +101,7 @@ input[type="radio"]:checked {
 .sidebar {
     flex: 1.5;
     display: flex;
-    justify-content: flex-end; /* Siirtää kuvan oikealle */
+    justify-content: flex-end;
     align-items: center;
 	margin-left: auto;
 }
