--- a/templates/song.html
+++ b/templates/song.html
@@ -4,12 +4,12 @@
         <meta name='viewport' content='width=device-width, initial-scale=1'>
     </head>
     
-    <body class="song-body">
+    <body>
         <div class="header">
             <h1>Song search</h1>
         </div>
         <div class="container">
-            <div class="content-song">
+            <div class="content">
                 {% if results %}
                     <h2 style="text-align: center;">{{ results[0] }}</h2>
                     <h3 style="text-align: center;">{{ results[1] }}</h3>
