--- a/static/main.css
+++ b/static/main.css
@@ -1,15 +1,8 @@
-body {
-	margin: auto;
-	max-width: 60em;
-	font-family: 'Helvetica', 'Arial', sans-serif;
-	background: linear-gradient(90deg, #00051d, #4e0037);
-}
-
 pre {
 	font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
-.song-body {
+body {
 	margin: auto;
 	max-width: 90em;
 	font-family: 'Helvetica', 'Arial', sans-serif;
@@ -24,21 +17,10 @@ pre {
     font-size: 0.7em;
     font-weight: bold;
     color: rgb(218, 218, 218);
-	background: rgba(0, 0, 0, 0.05);
 	padding: .3em 0.3em;
 }
 
 .content {
-	font-size: 1em;
-	color: #000000;
-	background: rgba(189, 189, 189, 0.40);
-	padding: .5em 1em;
-	border: .3em solid #141414;
-	border-radius: .5em;
-	min-height: 85vh;
-}
-
-.content-song {
 	flex: 3;
     min-width: 50%;
 	font-size: 1em;
@@ -55,7 +37,7 @@ label {
     font-weight: bold;
 }
 
-input[type="text"] {
+input[name="query"] {
 	width: 450px;
 	height: 40px;
 	color: white;
@@ -64,6 +46,18 @@ input[type="text"] {
 	background: transparent;
 	text-align: center;
 	border: .2em solid whitesmoke;
+	border-radius: .5em;
+}
+
+input[name="filter"] {
+	width: 13em;
+	height: 2.5em;
+	color: #000000;
+	display: block;
+	margin: 0 auto;
+	background: rgb(196, 191, 195);
+	text-align: center;
+	border: .2em solid #141414;
 	border-radius: .5em;
 }
 
@@ -101,9 +95,20 @@ input[type="radio"]:checked {
 .sidebar {
     flex: 1.5;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 	margin-left: auto;
+}
+
+.sidebar-content {
+	width: 20em;
+	font-size: 1em;
+	color: #000000;
+	background: rgba(189, 189, 189, 0.40);
+	padding: .5em 1em;
+	border: .3em solid #141414;
+	border-radius: .5em;
+	min-height: 40vh;
 }
 
 .sidebar img {
