--- a/static/main.css
+++ b/static/main.css
@@ -49,7 +49,7 @@ input[name="query"] {
 	border-radius: .5em;
 }
 
-input[name="filter"] {
+input[name="artist"] {
 	width: 13em;
 	height: 2.5em;
 	color: #000000;
@@ -68,14 +68,12 @@ button {
 	background: transparent;
 	text-align: center;
 	padding: .2em 1em .3em;
-	border: .1em solid linear-gradient(90deg, #001885, #007a5c);
 	border-radius: .5em;
 }
 
 button:hover {
 	padding: .2em 1.1em .3em;
 	background-color: #1f011c;
-	border: .2em solid linear-gradient(90deg, #00115c, #004130);
 	transition: background-color 0.5s ease;
 	transition: padding 0.2s ease;
 }
